--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -26,8 +26,8 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '<enter your client id here>',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'client_id': 'c205d531-1fa1-46da-b5aa-07555fe4dd83',
+        'scope':  'patient/Patient.read patient/Observation.read patient/DocumentReference.read user/Person.read user/Practitioner.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
