--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -77,7 +77,8 @@
     <script src='./src/js/example-smart-app.js'></script>
 
     <!-- FHIR Client JS Library -->
-    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
+    <!-- <script src='./lib/js/fhir-client-v0.1.12.js'></script> -->
+    <script src="./node_module/fhirclient/build/fhir-client.js"></script>
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
