--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -86,6 +86,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
       FHIR.oauth2.ready(client => client.request(`Patient/${client.patient.id}`));
+      return ret.promise();
     </script>
   </body>
 </html>
