--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -85,10 +85,45 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
-      FHIR.oauth2.ready()
-        .then(client => client.request("Patient"))
-        .then(console.log)
-        .catch(console.error);
+      var render = createRenderer("output");
+
+      function getMedicationName(medCodings) {
+        var coding = medCodings.find(function(c){
+          return c.system == "http://www.nlm.nih.gov/research/umls/rxnorm";
+        });
+        return coding && coding.display || "Unnamed Medication(TM)";
+      }
+	  
+	  FHIR.oauth2.ready()
+	    // Get MedicationRequests for the selected patient
+        client.request("/MedicationRequest?patient=" + client.patient.id, {
+          resolveReferences: [ "medicationReference" ],
+          graph: true
+        })
+          
+        // Reject if no MedicationRequests are found
+        .then(function(data) {
+          if (!data.entry || !data.entry.length) {
+            throw new Error("No medications found for the selected patient");
+          }
+          return data.entry;
+        })
+        
+        // Build an array of medication names
+        .then(function(entries) {
+          return entries.map(function(item) {
+            return getMedicationName(
+              client.getPath(item, "resource.medicationCodeableConcept.coding") ||
+              client.getPath(item, "resource.medicationReference.code.coding")
+            );
+          });
+        })
+
+        // Render the list
+        .then(render);
+		
+		// Render any errors
+        .catch(render);
     </script>
   </body>
 </html>
