--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -120,7 +120,7 @@
         })
 
         // Render the list
-        .then(render);
+        .then(render)
 		
 		// Render any errors
         .catch(render);
