--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -66,6 +66,10 @@
         </tr>
       </table>
     </div>
+    <div class="cell full">
+      <h4>Patient Medications</h4>
+      <pre id="output">Loading...</pre>
+    </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <!--
       Temporarily disable cerner-smart-embeddable-lib
@@ -75,6 +79,7 @@
 
     <!-- Application-level javascript-->
     <script src='./src/js/example-smart-app.js'></script>
+    <script src='./src/js/app.js'></script>
 
     <!-- FHIR Client JS Library -->
     <!-- <script src='./lib/js/fhir-client-v0.1.12.js'></script> -->
