--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -101,10 +101,10 @@
 	  
 	  FHIR.oauth2.ready()
 	    // Get MedicationRequests for the selected patient
-        client.request("/MedicationRequest?patient=" + client.patient.id, {
+            .then(client => client.request("/MedicationRequest?patient=" + client.patient.id, {
           resolveReferences: [ "medicationReference" ],
           graph: true
-        })
+        }))
           
         // Reject if no MedicationRequests are found
         .then(function(data) {
