--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -29,7 +29,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'c205d531-1fa1-46da-b5aa-07555fe4dd83',
-        'scope':  'patient/Patient.read patient/Observation.read patient/DocumentReference.read user/Person.read user/Practitioner.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/MedicationRequest.read patient/DocumentReference.read user/Person.read user/Practitioner.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
