--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -43,7 +43,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
-      var render = createRenderer("output");
+      var render = createRenderer("output","holder");
 
       function getMedicationName(medCodings) {
         var coding = medCodings.find(function(c){
