--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -19,11 +19,9 @@
       <div class="bounce3"></div>
     </div>
     <div id='holder'></div>
-    <div class="cell full">
-      <h4>Patient Medications</h4>
-      <pre id="output">Loading...</pre>
-    </div>
+    <h4>Patient Information</h4
     <div id='patient'></div>
+    <h4>Medication Information</h4
     <div id='meds'></div>
     <!-- Required JS files to enable this page to embed within an MPage -->
     <!--
