--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -60,7 +60,8 @@
                 client.patient.read().then(
                     function(pt) {
                         document.getElementById("patientj").innerText = JSON.stringify(pt, null, 4);
-			document.getElementById("patient").innerText = "Patient json size: " + pt.length;
+			//document.getElementById("patient").innerText = "Patient json size: " + pt.length;
+			document.getElementById("patient").innerText = pt.text.div;
                     },
                     function(error) {
                         document.getElementById("patient").innerText = error.stack;
