--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -61,7 +61,7 @@
                     function(pt) {
                         document.getElementById("patientj").innerText = JSON.stringify(pt, null, 4);
 			//document.getElementById("patient").innerText = "Patient json size: " + pt.length;
-			pt_str = pt_str.slice(1,-1);
+			pt_str = pt.text.div.slice(1,-1);
 			document.getElementById("patient").innerText = pt_str;
                     },
                     function(error) {
