--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -61,8 +61,7 @@
                     function(pt) {
                         document.getElementById("patientj").innerText = JSON.stringify(pt, null, 4);
 			//document.getElementById("patient").innerText = "Patient json size: " + pt.length;
-			pt_str = pt.text.div.slice(1,-1);
-			document.getElementById("patient").innerText = pt_str;
+			document.getElementById("patient").insertAdjacentHTML("afterend",pt.text.div);
                     },
                     function(error) {
                         document.getElementById("patient").innerText = error.stack;
